<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Remote_client</string>
    <string name="action_settings">Settings</string>
    <string name="title_play">Media</string>
    <string name="title_misc">Misc</string>
    <string name="button_play_text">Play/Pause</string>
    <string name="button_stop_text">Stop</string>
    <string name="button_next_text">&gt;&gt;|</string>
    <string name="button_prev_text">|&lt;&lt;</string>
    <string name="button_volUp_text">Vol +</string>
    <string name="button_volDn_text">Vol -</string>
    <string name="button_connect_text">Connect!</string>
    <string name="button_disconnect_text">Disconnect</string>
    <string name="textView_status_connected_text">Connected.</string>
    <string name="textView_status_disconnected_text">!Disconnected!</string>
    <string name="textView_play_warning">Please, connect to the computer first!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_address_text">Address:</string>
    <string name="text_port_text">Port:</string>
    <string name="xbmc_button_up">Up</string>
    <string name="xbmc_button_down">Down</string>
    <string name="xbmc_button_left">Left</string>
    <string name="xbmc_button_right">Right</string>
    <string name="xbmc_button_escape">Esc</string>
    <string name="xbmc_button_enter">Enter</string>
    <string name="xbmc_button_space">Space</string>
    <string name="xbms_button_tab">Fullscreen</string>
    <string name="button_mute">mute</string>
    <string name="action_connection_text">Connection</string>
    <string name="action_run_xbmc_text">Run XBMC</string>
    <string name="toast_connected">Connected.</string>
    <string name="toast_disconnected">Disconnected</string>
    <string name="loadingData_text">Loading...</string>
    <string name="title_keys">keys</string>

</resources>
