<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/background_dark"
    tools:context=".MainActivity$SectionFragment" >

    <Button
        android:id="@+id/xbmc_button_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onXbmcRight_Click"
        android:text="@string/xbmc_button_right"
        android:height="@dimen/xbmc_button_nav"
        android:width="@dimen/xbmc_button_nav"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/xbmc_button_up"
        android:layout_toEndOf="@+id/xbmc_button_up" />

    <Button
        android:id="@+id/xbmc_button_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="@dimen/xbmc_button_nav"
        android:onClick="onXbmcUp_Click"
        android:text="@string/xbmc_button_up"
        android:width="@dimen/xbmc_button_nav"
        android:layout_above="@+id/xbmc_button_right"
        android:layout_toRightOf="@+id/xbmc_button_left"
        android:layout_toEndOf="@+id/xbmc_button_left" />

    <Button
        android:id="@+id/xbmc_button_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/xbmc_button_up"
        android:layout_below="@+id/xbmc_button_right"
        android:onClick="onXbmcDown_Click"
        android:text="@string/xbmc_button_down"
        android:height="@dimen/xbmc_button_nav"
        android:width="@dimen/xbmc_button_nav"  />

    <Button
        android:id="@+id/xbmc_button_left"
        android:layout_width="@dimen/xbmc_button_nav"
        android:layout_height="@dimen/xbmc_button_nav"
        android:layout_alignBottom="@+id/xbmc_button_right"
        android:layout_below="@+id/xbmc_button_up"
        android:onClick="onXbmcLeft_Click"
        android:text="@string/xbmc_button_left"/>



    <Button
        android:id="@+id/xbmc_button_escape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/xbmc_button_up"
        android:layout_alignLeft="@+id/xbmc_button_left"
        android:onClick="onXbmcEscape_Click"
        android:text="@string/xbmc_button_escape" />

    <Button
        android:id="@+id/xbmc_button_mute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onXbmcMute_Click"
        android:text="@string/button_mute"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/xbmc_button_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/xbmc_button_volUp"
        android:onClick="onXbmcTab_Click"
        android:text="@string/xbms_button_tab"
        android:layout_alignLeft="@+id/xbmc_button_up"
        android:layout_alignStart="@+id/xbmc_button_up" />

    <Button
        android:id="@+id/xbmc_button_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/xbmc_button_left"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/xbmc_button_mute"
        android:onClick="onXbmcSpace_Click"
        android:text="@string/xbmc_button_space" />

    <Button
        android:id="@+id/xbmc_button_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="@dimen/xbmc_button_nav"
        android:maxWidth="@dimen/xbmc_button_nav"
        android:onClick="onXbmcEnter_Click"
        android:text="@string/xbmc_button_enter"
        android:layout_above="@+id/xbmc_button_space"
        android:layout_toRightOf="@+id/xbmc_button_right"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>