<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/background_dark"
    tools:context=".MainActivity$SectionFragment" >

    <Button
        android:id="@+id/button_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="onButtonPlay_Click"
        android:text="@string/button_play_text"
        android:background="@android:color/background_dark"
        android:textColor="@android:color/holo_orange_light" />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_play"
        android:layout_toLeftOf="@+id/button_next"
        android:layout_toRightOf="@+id/button_prev"
        android:onClick="onButtonStop_Click"
        android:text="@string/button_stop_text"
        android:background="@android:color/background_dark"
        android:textColor="@android:color/holo_orange_light" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_stop"
        android:layout_alignTop="@+id/button_play"
        android:layout_toRightOf="@+id/button_play"
        android:onClick="onButtonNext_Click"
        android:text="@string/button_next_text"
        android:background="@android:color/background_dark"
        android:textColor="@android:color/holo_orange_light" />

    <Button
        android:id="@+id/button_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_stop"
        android:layout_alignTop="@+id/button_play"
        android:layout_toLeftOf="@+id/button_play"
        android:onClick="onButtonPrev_Click"
        android:text="@string/button_prev_text"
        android:background="@android:color/background_dark" 
        style="@android:style/MediaButton.Previous"
        android:textColor="@android:color/holo_orange_light" />

    <TextView
        android:id="@+id/player_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:textColor="@android:color/holo_red_dark" />

    <Button
        android:id="@+id/button_volUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_volDn"
        android:layout_alignParentRight="true"
        android:text="@string/button_volUp_text"
        android:onClick="onButtonVolUp_Click"
        android:background="@android:color/background_dark"
        android:textColor="@android:color/holo_orange_light" />

    <Button
        android:id="@+id/button_volDn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_next"
        android:layout_alignParentRight="true"
        android:text="@string/button_volDn_text"
        android:onClick="onButtonVolDn_Click"
        android:background="@android:color/background_dark"
        android:textColor="@android:color/holo_orange_light" />

</RelativeLayout>
